--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cryptography==3.2.1
 defusedxml==0.6.0
 Django==3.1.3
 django-allauth==0.43.0
+django-filter==2.4.0
 idna==2.10
 oauthlib==3.1.0
 Pillow==8.0.1
