--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,15 @@ cffi==1.14.3
 chardet==3.0.4
 cryptography==3.2.1
 defusedxml==0.6.0
+dj-database-url==0.5.0
 Django==3.1.3
 django-allauth==0.43.0
 django-filter==2.4.0
+gunicorn==20.0.4
 idna==2.10
 oauthlib==3.1.0
 Pillow==8.0.1
+psycopg2==2.8.6
 pycparser==2.20
 PyJWT==1.7.1
 python3-openid==3.2.0
