--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,12 @@ chardet==3.0.4
 cryptography==3.2.1
 defusedxml==0.6.0
 dj-database-url==0.5.0
+dj-static==0.0.6
 Django==3.1.3
 django-allauth==0.43.0
 django-filter==2.4.0
+django-storages==1.10.1
+dropbox==10.8.0
 gunicorn==20.0.4
 idna==2.10
 oauthlib==3.1.0
@@ -21,5 +24,6 @@ requests==2.24.0
 requests-oauthlib==1.3.0
 six==1.15.0
 sqlparse==0.4.1
+static3==0.7.0
 urllib3==1.25.11
 whitenoise==5.2.0
