--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ idna==2.10
 oauthlib==3.1.0
 Pillow==8.0.1
 psycopg2==2.8.6
+psycopg2-binary==2.8.6
 pycparser==2.20
 PyJWT==1.7.1
 python3-openid==3.2.0
