--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.3.0
 certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
+cloudinary==1.22.0
 cryptography==3.2.1
 defusedxml==0.6.0
 dj-database-url==0.5.0
